2014-12-21 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_arm.c: Correct check to guard overflow of index
	of constants from program counter.

2014-11-24 Paulo Andrade <pcpa@gnu.org>

	* lib/lightning.c: Remove an optimization to calee save
	registers that may incorrectly remove a jit_movr under
	special conditions.

2014-11-20 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_ppc.h, lib/jit_ppc-cpu.c,
	lib/jit_ppc.c: Add initial powerpc le support.

2014-11-20 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_disasm.c: Change thumb or arm disassemble based on
	jit code before disassembly.

	* lib/jit_arm-cpu.c: Correct reversed arguments to LDRD and
	STRD instructions, and correct checking for support of those.

	* lib/jit_arm-swf.c: Correct wrong use of LDRD and STRD and
	only use those if the register is even.

	* check/check.arm.swf.sh, check/check.arm4.swf.sh: New files
	to test LDRD and STRD, as well as the alternate code path
	when those are not available, in the .arm4. test case.

	* check/Makefile.am: Update for the new test cases.

2014-11-08 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_private.h, lib/jit_aarch64.c,
	lib/jit_alpha.c, lib/jit_arm.c, lib/jit_hppa.c,
	lib/jit_ia64.c, lib/jit_mips.c, lib/jit_ppc.c,
	lib/jit_s390x.c, lib/jit_sparc.c, lib/jit_x86.c:
	Implement a private jit_flush call, that flushes
	the cache, if applicable, aligning down to the
	previous and up to the next page boundary.

2014-11-08 Paulo Andrade <pcpa@gnu.org>

	* check/ctramp.c: New file. It just repeats the test
	of tramp.tst, but using two jit_state_t, what should
	test possible issues with two contexts, and also validate
	jit_tramp works on backends with function descriptions.

	* check/Makefile.am: Update for new test case.

2014-11-03 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_mips.h: Do not make the t9 register
	JIT_R11 (or JIT_R7 for n32 or n64 abi) available. Previously
	it cause problems if one expects it to not be changed in a